<resources>
    <string name="app_name">LoopTalk</string>
    <string name="looptalk">LoopTalk</string>
    <string name="made_with_love">Made with Love</string>
    <string name="welcom_back">Welcom back</string>
    <string name="sign_in">Sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="create_account">Create new account</string>
    <string name="create_your_new_account">create your new account</string>
    <string name="username">Username</string>
    <string name="do_you_want_to_log_out">Do you want to log out ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="status">status</string>
    <string name="update">Update</string>
</resources>