<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".login">

<ImageView
    android:layout_margin="20dp"
    android:id="@+id/logo_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/icon"/>

    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom_back"
        android:textStyle="bold"
        android:textSize="50sp"
        android:fontFamily="@font/adlam_display"
        android:textColor="#00A7F1"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:fontFamily="@font/adlam_display"
        android:textColor="#00A7F1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="#00A7F1"
            app:boxStrokeColor="#00A7F1"
            android:fontFamily="@font/adlam_display">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:fontFamily="@font/adlam_display"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#00A7F1"
            app:hintTextColor="#00A7F1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/adlam_display" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <Button-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:id="@+id/forget"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/forget_password"-->
<!--            android:fontFamily="@font/adlam_display"-->
<!--            android:textColor="@color/white"-->
<!--            android:backgroundTint="@color/txt" />-->

        <Button
            android:id="@+id/login"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/txt"
            android:fontFamily="@font/adlam_display"
            android:text="@string/login"/>

        <Button
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:id="@+id/signin"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:text="@string/create_account"
            android:fontFamily="@font/adlam_display"
            android:textColor="@color/white"
            android:backgroundTint="@color/txt" />

    </LinearLayout>

</LinearLayout>