<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="325dp"
    android:layout_height="234dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="13dp"
    android:background="@drawable/shapedialog">

    <ImageView
        android:id="@+id/logoutdia"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/logout"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:textColor="@color/black"
        android:text="@string/do_you_want_to_log_out"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesbtn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:textStyle="bold"
            android:layout_weight="5"
            android:text="@string/yes"
            android:fontFamily="@font/adlam_display"
            android:gravity="center"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/nobtn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_13sdp"
            android:fontFamily="@font/adlam_display"
            android:textStyle="bold"
            android:layout_weight="5"
            android:text="@string/no"
            android:gravity="center"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
</LinearLayout>
