<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".setting">

    <ImageView
        android:layout_margin="20dp"
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:fontFamily="@font/adlam_display"
        android:textColor="@color/txt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settingprofile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/u"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settingname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:hintTextColor="#00A7F1"
            app:boxStrokeColor="#00A7F1"
            android:fontFamily="@font/adlam_display">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/settingstatus"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            app:hintTextColor="#00A7F1"
            app:boxStrokeColor="#00A7F1"
            android:fontFamily="@font/adlam_display">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/donebutt"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/txt"
            android:fontFamily="@font/adlam_display"
            android:text="@string/update"/>

    </LinearLayout>
</LinearLayout>